--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -16,6 +16,9 @@ commands:
   money2:
     description: "Send money to other player"
     usage: "/money2 PlayerName amount"
+  store:
+    description: "Lists all items and price in the shop"
+    usage: "/store"
     #aliases: [cmd, command]
     #permission: permission.node
     #permission-message: "You do not have permission to use this command"
